# copilot-study

./: .gitignore  Cargo.toml  README.md  REPLICATION.md  Semi-Structured Interview Questions.md
advent_of_code/haskell/: advent.hs
advent_of_code/java/: Solution.java
advent_of_code/python/solution/: advent14.py
advent_of_code/rust/: Cargo.toml
benfords_law/py/: plotter.py
chat/py/: client.py  crypto.py  requirements.txt  server.py  task_client.py  task_crypto.py  task_server.py
chat/py/client_task/: server.py
chat/py/server_task/: server.py
chat/py/solution/: crypto.py  server.py
chat/py/task1/: client.py  server.py
chat/py/task2/: client.py  crypto.py
chat/py/task3/: server.py
chat/py/training/: client.py
chat/rust/: Cargo.toml
chat/rust/client/: Cargo.toml
chat/rust/crypto_utils/: Cargo.toml
chat/rust/task2/client/: Cargo.toml
chat/rust/task2/client/src/: main.rs
figures/: chunks.py  fig4a.py  fig4b.py  fig5.py  fig6.py  fig7a.py  fig7b.py  utils.py
figures/exports/: p1-export.xlsx  p10-export.xlsx  p11-codes.xlsx  p11-export.xlsx  p12-export.xlsx  p13-export.xlsx  p14-export.xlsx  p15-export.xlsx  p16-export.xlsx  p17-export.xlsx  p18-export.xlsx  p19-export.xlsx  p2-export.xlsx  p20-export.xlsx  p3-export.xlsx  p4-export.xlsx  p5-export.xlsx  p6-export.xlsx  p7-export.xlsx  p8-export.xlsx  p9-export.xlsx
task3/rust/: Cargo.toml
task3/solutions/: main.rs
task4/rust/: Cargo.toml
task5/: advent.py
task5/python/: advent14.py  advent2.py
task5/solution/: advent.py
training/: Cargo.toml  client.py
(+32 files in other folders)
