[package]
name = "client"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bp256 = "0.3.0"
elliptic-curve = "0.11.6"
rust-crypto = "0.2.36"
rand = "0.8.4"
aes-stream = "0.2.1"
aes = "0.7.5"
block-modes = "0.8.1"
hex = { version = "0.4", default-features = false }
hex-literal = "0.3.1"
openssl = "0.10.38"
rustc-serialize = "0.3.24"
futures = "0.3.19"
async-std = "1.10.0"
byteorder = "1.4.3"
num = "0.4.0"
num-bigint = "0.4.3"
serde_json = "1.0"
serde = { version = "1.0.133", features = ["derive"] }
crypto_utils = {path = "../crypto_utils"}
encstream = { path = "../encstream" }